--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.16.1",
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
+    "firebase-tools": "^9.6.0",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
