--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
   "hosting": {
+    "site": "producthunt-app",
     "public": "out",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
