--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
-    "presets": [
-        "next/babel",
-        "@emotion/babel-preset-css-prop"
-    ],
-    "plugins": [
-        [
-            "emotion"
-        ]
+  "presets": [
+    "next/babel",
+    [
+      "@emotion/babel-preset-css-prop",
+      {
+        "runtime": "automatic"
+      }
     ]
+  ]
 }
