--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "export": "next export"
   },
   "dependencies": {
+    "@babel/core": "^7.23.2",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "babel-plugin-emotion": "^10.0.33",
     "date-fns": "^2.16.1",
+    "eslint-config-next": "^14.0.0",
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
     "firebase-tools": "^9.6.0",
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "^14.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-file-uploader": "^2.4.3"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15"
   }
 }
